fix: 將檔案路徑改為絕對路徑

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>不可能自己寫主持人用的網頁吧</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="wrapper" class="container-fluid">
@@ -17,7 +17,7 @@
                 <div class="col-12">
                     <div class="row role bad">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/wolf-were.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/wolf-were.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>狼人</h3>
@@ -31,7 +31,7 @@
                 <div class="col-12">
                     <div class="row role bad">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/wolf-king.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/wolf-king.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>狼王</h3>
@@ -45,7 +45,7 @@
                 <div class="col-12">
                     <div class="row role bad">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/wolf-hide.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/wolf-hide.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>隱狼</h3>
@@ -59,7 +59,7 @@
                 <!-- <div class="col-12">
                     <div class="row role bad">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/wolf-white.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/wolf-white.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>白狼王</h3>
@@ -73,7 +73,7 @@
                 <div class="col-12">
                     <div class="row role bad">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/wolf-queen.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/wolf-queen.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>狼美人</h3>
@@ -87,7 +87,7 @@
                 <div class="col-12">
                     <div class="row role bad">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/wolf-ghost.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/wolf-ghost.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>惡靈騎士</h3>
@@ -106,7 +106,7 @@
                 <div class="col-12">
                     <div class="row role civilian">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/civilian.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/civilian.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>平民</h3>
@@ -122,7 +122,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-prophet.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-prophet.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>預言家</h3>
@@ -135,7 +135,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-witch.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-witch.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>女巫</h3>
@@ -148,7 +148,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-hunter.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-hunter.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>獵人</h3>
@@ -161,7 +161,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-knight.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-knight.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>騎士</h3>
@@ -174,7 +174,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-guard.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-guard.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>守衛</h3>
@@ -187,7 +187,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-fool.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-fool.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>白痴</h3>
@@ -200,7 +200,7 @@
                 <!-- <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-eros.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-eros.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>丘比特</h3>
@@ -213,7 +213,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-magic.jpeg" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-magic.jpeg" alt="">
                         </div>
                         <div class="col-5">
                             <h3>魔術師</h3>
@@ -226,7 +226,7 @@
                 <div class="col-12">
                     <div class="row role god">
                         <div class="col-7">
-                            <img class="img-fluid" width="150" src="/images/god-thief.png" alt="">
+                            <img class="img-fluid" width="150" src="./images/god-thief.png" alt="">
                         </div>
                         <div class="col-5">
                             <h3>盜賊</h3>
@@ -688,7 +688,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <script src="/js/functions.js"></script>
-    <script src="/js/active.js"></script>
+    <script src="./js/functions.js"></script>
+    <script src="./js/active.js"></script>
 </body>
 </html>
